Fix for blurry images take two!

--- a/css/blurry-image-fix.css
+++ b/css/blurry-image-fix.css
@@ -1,3 +1,3 @@
 .image_gallery_slide img {
-  transform: translateX(calc(-50% + 0.5px)) translateY(-50%);
+  transform: translateX(calc(-50% + 0.5px)) translateY(calc(-50% + 0.5px));
 }
